# NUGDS-Gameathon-GameJam

./: CMakeLists.txt  run-debug.bat  run-release.bat
src/: main.cpp  mesh.hpp  shader.cpp  shader.hpp  unique_buffer.hpp
src/shaders/: fragment.glsl  vertex.glsl
